--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
 <html>
-<head></head>
+<head>
+<script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
+<script src="js/markerclusterer_compiled.js" type="text/javascript"></script>
+</head>
 <body>
 <h1>El cumple de camilo!</h1>
 <img src="cumplecamilo.jpg"/>
+<div id="map_canvas"></div>
+
+<script type="text/javascript">
+  var map;
+
+  function initialize() {
+    var myOptions = {
+      zoom: 6,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+
+    map = new google.maps.Map(document.getElementById(‘map_canvas’),myOptions);
+
+    if(navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        var pos = new google.maps.LatLng(position.coords.latitude,position.coords.longitude);
+        var infowindow = new google.maps.InfoWindow({map: map, position: pos, content: Tu ubicacion actual usando HTML5.’ });
+        map.setCenter(pos);
+      }, function() {
+        handleError(true);
+      });
+    } else {
+      // Si el navegador no soporta geolocalización
+      handleError(false);
+    }
+  }
+  
+  function handleError(errorFlag) {
+
+    if (errorFlag) {
+      var content = ‘Error en el servicio de geolocalizacion.’;
+    } else {
+      var content = ‘Error: Tu navegador no soporta geolocalización.’;
+    }
+
+    var options = { map: map, position: new google.maps.LatLng(60, 105), content: content };
+    var infowindow = new google.maps.InfoWindow(options);
+    map.setCenter(options.position);
+
+  }
+  google.maps.event.addDomListener(window, ‘load’, initialize);
+</script>
 </body>
 </html>
