--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
 
-    map = new google.maps.Map(document.getElementById(‘map_canvas’),myOptions);
+    map = new google.maps.Map(document.getElementById('map_canvas'),myOptions);
 
     if(navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function(position) {
         var pos = new google.maps.LatLng(position.coords.latitude,position.coords.longitude);
-        var infowindow = new google.maps.InfoWindow({map: map, position: pos, content: Tu ubicacion actual usando HTML5.’ });
+        var infowindow = new google.maps.InfoWindow({map: map, position: pos, content: 'Tu ubicacion actual' });
         map.setCenter(pos);
       }, function() {
         handleError(true);
@@ -36,9 +36,9 @@
   function handleError(errorFlag) {
 
     if (errorFlag) {
-      var content = ‘Error en el servicio de geolocalizacion.’;
+      var content = 'Error en el servicio de geolocalizacion.';
     } else {
-      var content = ‘Error: Tu navegador no soporta geolocalización.’;
+      var content = 'Error: Tu navegador no soporta geolocalización.';
     }
 
     var options = { map: map, position: new google.maps.LatLng(60, 105), content: content };
@@ -46,7 +46,7 @@
     map.setCenter(options.position);
 
   }
-  google.maps.event.addDomListener(window, ‘load’, initialize);
+  google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 </body>
 </html>
