--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
 <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 <script src="js/markerclusterer_compiled.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
+<title>El cumple Nº5 de Camilo!</title>
 </head>
 <body>
-<h1>El cumple de camilo!</h1>
-<img src="cumplecamilo.jpg"/>
 <div id="map_canvas"></div>
 
 <script type="text/javascript">
