--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   function initialize() {
     var myOptions = {
-      zoom: 18,
+      zoom: 16,
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
 
@@ -22,8 +22,9 @@
     if(navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function(position) {
         var pos = new google.maps.LatLng(position.coords.latitude,position.coords.longitude);
-        var infowindow = new google.maps.InfoWindow({map: map, position: pos, content: 'Tu ubicacion actual' });
+        var infowindow = new google.maps.InfoWindow({map: map, position: pos, content: 'Estás aquí' });
         map.setCenter(pos);
+        calculateRoute(pos, 'Mons. Carlos Casanueva 0237, Providencia');
       }, function() {
         handleError(true);
       });
@@ -46,6 +47,34 @@
     map.setCenter(options.position);
 
   }
+
+  function calculateRoute(from, to){
+
+    var directionsService = new google.maps.DirectionsService();
+    var directionsRequest = {
+      origin: from,
+      destination: to,
+      travelMode: google.maps.DirectionsTravelMode.DRIVING,
+      unitSystem: google.maps.UnitSystem.METRIC
+    };
+    directionsService.route(
+      directionsRequest,
+      function(response, status)
+      {
+        if (status == google.maps.DirectionsStatus.OK)
+        {
+          new google.maps.DirectionsRenderer({
+            map: map,
+            directions: response
+          });
+        }
+        else
+          $("#error").append("Unable to retrieve your route<br />");
+      }
+    );
+  }
+
+
   google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 </body>
