TRY: Directions api

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         var pos = new google.maps.LatLng(position.coords.latitude,position.coords.longitude);
         var infowindow = new google.maps.InfoWindow({map: map, position: pos, content: 'Estás aquí' });
         map.setCenter(pos);
-        calculateRoute(pos, 'Mons. Carlos Casanueva 0237, Providencia');
+        calculateRoute(pos, 'Calle los Cerezos 4240, Peñalolén, Santiago');
       }, function() {
         handleError(true);
       });
