--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 <script src="js/markerclusterer_compiled.js" type="text/javascript"></script>
-<link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
+<link rel="stylesheet" type="text/css" media="all" href="css/style.css?v=2" />
 <title>El cumple Nº5 de Camilo!</title>
 </head>
 <body>
