--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
-<script src="js/markerclusterer_compiled.js" type="text/javascript"></script>
+<!--<script src="js/markerclusterer_compiled.js" type="text/javascript"></script>-->
 <link rel="stylesheet" type="text/css" media="all" href="css/style.css?v=1.1" />
 <title>El cumple Nº5 de Camilo!</title>
 </head>
@@ -75,7 +75,8 @@
   }
 
 
-  google.maps.event.addDomListener(window, 'load', initialize);
+  //google.maps.event.addDomListener(window, 'load', initialize);
+  initialize();
 </script>
 </body>
 </html>
